[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "domdf_python_tools"
version = "2.7.0"
description = "Helpful functions for Python\u2002🐍\u2002🛠️"
readme = "README.rst"
keywords = [ "utilities",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/domdf_python_tools"
"Issue Tracker" = "https://github.com/domdfcoding/domdf_python_tools/issues"
"Source Code" = "https://github.com/domdfcoding/domdf_python_tools"
Documentation = "https://domdf_python_tools.readthedocs.io/en/latest"
